Реализовал взаимодействие между сервисами api-gateway и posts, удалил лишние контроллеры, сервисы и репозитории, которые делал для rest
